err/motmot.flymovieformat.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/motmot'...
Listing './lib/python3.5/site-packages/motmot/FlyMovieFormat'...
Compiling './lib/python3.5/site-packages/motmot/FlyMovieFormat/fmf2bmps.py'...
***   File "./lib/python3.5/site-packages/motmot/FlyMovieFormat/fmf2bmps.py", line 51
    print 'fmf_filename does not end in .fmf'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/motmot/FlyMovieFormat/fmf_collapse.py'...
***   File "./lib/python3.5/site-packages/motmot/FlyMovieFormat/fmf_collapse.py", line 19
    print """Usage: fmf_collapse fmf_filename1 fmf_filename2

This program takes a set of .fmf files and saves the mean of all
frames from all files as a .bmp image file.

The files used are in the range fmf_filename1 <= FILE <= fmf_filename2.

"""
                                                            

                                                                
                                           

                                                                       

  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/motmot/FlyMovieFormat/fmfcat.py'...
***   File "./lib/python3.5/site-packages/motmot/FlyMovieFormat/fmfcat.py", line 185
    except FMF.NoMoreFramesException, err:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/motmot.FlyMovieFormat-1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
